--- a/Jiutianju/Tpl/shopnews/create.html
+++ b/Jiutianju/Tpl/shopnews/create.html
@@ -38,7 +38,7 @@
                     </div>
                     <div style="width: 300px;height: 100px; float: left;">
                         <img id="photo_img" width="80" height="80"  src="__ROOT__/attachs/<{$detail.photo|default='default.jpg'}>" />
-                        <a href="<{:U('setting/attachs')}>">设置【全站商城支持传七牛云联系：120,585,022】</a>
+                        <a href="<{:U('setting/attachs')}>">设置【全站商城】</a>
                         建议尺寸<{$CONFIG.attachs.shopnews.thumb}>
                     </div>
                     <script>
