--- a/Jiutianju/Fenzhan/shop/edit.html
+++ b/Jiutianju/Fenzhan/shop/edit.html
@@ -6,7 +6,7 @@
         <li class="li2 li3">编辑商家</li>
     </ul>
 </div>
-<p class="attention"><span>说明，后台添加商户暂时不判断管理员ID是否重复，如果需要审核自动修改管理员id则打开Baocms\Lib\Action\Admin\ShoprecognitionAction.class.php167行取消注释！</span></p>
+<p class="attention"><span>说明，后台添加商户暂时不判断管理员ID是否重复，如果需要审核自动修改管理员id则打开Jiutianju\Lib\Action\Admin\ShoprecognitionAction.class.php167行取消注释！</span></p>
 <form  target="baocms_frm" action="<{:U('shop/edit',array('shop_id'=>$detail['shop_id']))}>" method="post">
     <div class="mainScAdd">
         <div class="tableBox">
