--- a/Jiutianju/Tpl/index/index.html
+++ b/Jiutianju/Tpl/index/index.html
@@ -79,7 +79,7 @@
                 <div class="t3">
                 <ul>
                 	 <!--<li><a class="jq_menu"  target="main_frm" href="<{:U('clean/cache')}>">待处理（<p class="hongse">2</p>）</a></ul>li>-->
-                     <!-- <li><a class="jq_menu" target="_blank" href="http://www.baocms.com/help/">使用教程</a>
+                     <!-- <li><a class="jq_menu" target="_blank" href="http://www.jiutianju.com/help/">使用教程</a>
                      <li><a class="jq_menu" target="_blank" href="http://www.shenmoyun.cn">域名空间</a> -->
                      <li><a href="<{:U('login/logout')}>" class="jq_menu">退出</a></li>
                      <li class=" jq_menu2" ><a href="/" target="_blank" class="jq_menu">站点首页</a></li>
