--- a/Jiutianju/Tpl/navigation/index.html
+++ b/Jiutianju/Tpl/navigation/index.html
@@ -14,7 +14,7 @@
     </ul>
 </div>
 <div class="main-cate">
-    <p class="attention"><span>注意：</span>这里管理你的导航，添加菜单成功后无法编辑类型，模板调用方式：<a style="color:#F00; font-weight:bold" target="_blank" href="http://www.baocms.com/">点击查看</a> 或者访问：http://www.baocms.com/ 联系QQ：787083894</p>
+    <p class="attention"><span>注意：</span>这里管理你的导航，添加菜单成功后无法编辑类型，模板调用方式：<a style="color:#F00; font-weight:bold" target="_blank" href="http://www.jiutianju.com/">点击查看</a> 或者访问：http://www.jiutianju.com/ 联系QQ：787083894</p>
     <div class="jsglNr">
         <form id="cate_action" action="" target="baocms_frm" method="post">
             <div class="selectNr" style="border-top: 1px solid #dbdbdb;">
