--- a/Jiutianju/Fenzhan/index/old.html
+++ b/Jiutianju/Fenzhan/index/old.html
@@ -74,7 +74,7 @@
                 </div>
                 <div class="gxphp">
                     <div class="linktxt">
-                        <a href="http://www.baocms.com" target="_blank">BAOCMS</a>      <a href="http://bbs.baocms.com/" target="_blank">支持论坛</a>     <a href="http://www.baocms.com/bbs/" target="_blank">帮助？</a>
+                        <a href="http://www.jiutianju.com" target="_blank">BAOCMS</a>      <a href="http://bbs.baocms.com/" target="_blank">支持论坛</a>     <a href="http://www.jiutianju.com/bbs/" target="_blank">帮助？</a>
                     </div>
                     <div class="linkhc">
                         <a href="<{:U('index/index')}>">后台首页</a>
